# invenflask

./: .flake8  .gitignore  MANIFEST.in  README.md  app.py  database.db  example.config.py  example.config.toml  init.d_invenflask  init.sh  init_db.py  old_database.db  package-lock.json  package.json  pyproject.toml  requirements.txt  schema.sql  sql_commands  wsgi.py
.github/: dependabot.yml
.github/workflows/: build_packages.yml  changelog.sh  lint.yml  release.yml
migrations/versions/: 4994f94014b5_.py  6cf6bb1af5e1_.py  6e10d0ad5159_.py  863f81a1b742_.py  a0d95191a5c0_.py
src/conram/: _version.py  app.py  forms.py  models.py
src/conram/templates/: asset_create.html  base.html  bulk_import_verify.html  search.html  status.html
src/invenflask/: _version.py  app.py  app3.py  init_db.py  models.py  schema.sql
src/invenflask/static/: next_field.js
src/invenflask/templates/: addStaffModal.html  asset_edit.html  base.html  bulk_assets.html  bulk_create_verify.html  bulk_import.html  bulk_import_verify.html  checkin.html  checkout.html  create_asset.html  edit_asset.html  history.html  index.html  settings.html  single_history.html  staff.html  staff_create.html  staff_edit.html  status.html
static/uploads/: Detailed_Packing_List_RO05857.csv
templates/: base.html  checkin.html  create_asset.html  history.html  staff.html  status.html
test_data/: convertcsv.csv
uploads/: Packing_List_RO11986.xlsx_-_Sheet1_1.csv  Packing_List_RO11986.xlsx_-_Sheet1_2.csv  Untitled_spreadsheet_-_blfc-2023-applications-2023-10-30_02_38_50.csv
