[project]
name = "conram"
dynamic = ["version"]
authors = [
    { name = "Daniel Rahamim" }
]
description = "A Flask-based Convention Radio Asset Manager"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "flask >=2.2.2, <4",
    "toml >=0.10.2, <1",
    "pandas ==2.2.3",
    "flask-assets >=2.0",
    "Bootstrap-flask >=2.2.0",
    "wheel >=0"

]

[project.scripts]
conram-init-db = "conram.init_db:main"

[project.urls]
"Bug Tracker" = "https://github.com/drahamim/conram/issues"

[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=7.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/conram/_version.py"
